2023-04-24 `v0.2.0` - 説明記入欄を自由に増減できるように     - deleteボタンを追加 - 一覧表未入力時、画像を大きく表示して説明欄を下にするように変更

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             </div>
             <div class="desc">
                 <h3>説明</h3>
-                <input type="text">
+                <div><input type="text"><button onclick="event.srcElement.parentNode.parentNode.removeChild(event.srcElement.parentNode);">&#xf55a</button></div>
                 <button onclick="addDescInput()">&#xf067</button>
             </div>
             <div class="list">
