--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@
 <body>
     <article>
         <h1>AXT_Product-Description-Maker</h1>
+        <p class="version">ver0.2.2 (2023-05-12 released)</p>
+        <p class="credit">©2023- <a href="https://twitter.com/AyaExpTech">AyaExpTech</a>,
+            <a href="https://twitter.com/AyaKoto_info">Ayasaka-Koto</a>
+            (Licensed by "<a href="https://axtech.dev/license/#aetos-for-seller">AeTOS for Seller</a>")
+        </p>
         <!-- 入力欄 -->
         <section class="in">
             <div class="name">
@@ -29,7 +34,9 @@
             </div>
             <div class="desc">
                 <h3>説明</h3>
-                <div><input type="text"><button onclick="event.srcElement.parentNode.parentNode.removeChild(event.srcElement.parentNode);">&#xf55a</button></div>
+                <div><input type="text"><button
+                        onclick="event.srcElement.parentNode.parentNode.removeChild(event.srcElement.parentNode);">&#xf55a</button>
+                </div>
                 <button onclick="addDescInput()">&#xf067</button>
             </div>
             <div class="list">
