2023-05-12 `v0.2.3` - ページのタイトルを`Demo`から`Product-Description-Maker`に変更(変更忘れてた) - faviconとOGPを設定(完全に忘れてた)

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Demo</title>
+    <title>Product-Description-Maker</title>
     <!-- CSS読み込み -->
     <link rel="stylesheet" href="style.css">
     <!-- 前提スクリプト -->
@@ -12,11 +12,19 @@
     <script src="https://cdn.jsdelivr.net/gh/AyaExpTech/AXT-func.js@v3.4.0/script.min.js"></script>
     <!-- スクリプト読み込み -->
     <script src="script.js"></script>
+    <!-- ==== favicon設定 ==== -->
+    <link rel="icon" href="https://axtech.dev/img/logo.svg">
+    <!-- ==== OGP設定 ==== -->
+    <meta property="og:type" content="article">
+    <meta property="og:title" content="Product-Description-Maker">
+    <meta property="og:description" content="Product-Description-Maker">
+    <meta property="og:image" content="https://axtech.dev/img/thumbnail.png">
+    <meta name="twitter:card" content="summary">
 </head>
 
 <body>
     <article>
-        <h1>AXT_Product-Description-Maker</h1>
+        <h1>Product-Description-Maker</h1>
         <p class="version">ver0.2.2 (2023-05-12 released)</p>
         <p class="credit">©2023- <a href="https://twitter.com/AyaExpTech">AyaExpTech</a>,
             <a href="https://twitter.com/AyaKoto_info">Ayasaka-Koto</a>
